--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.1",
+    "howler": "^2.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
